@@ -1,6 +1,8 @@
 package uk.gov.hmcts.reform.pip.account.management;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.restassured.response.Response;
 import org.json.JSONObject;
 import org.junit.jupiter.api.AfterAll;
@@ -11,7 +13,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
 import uk.gov.hmcts.reform.pip.account.management.model.account.AzureAccount;
 import uk.gov.hmcts.reform.pip.account.management.model.account.PiUser;
-import uk.gov.hmcts.reform.pip.account.management.utils.FunctionalTestBase;
+import uk.gov.hmcts.reform.pip.account.management.utils.AccountHelperBase;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
 import uk.gov.hmcts.reform.pip.model.account.UserProvenances;
 
@@ -20,15 +22,17 @@ import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ThreadLocalRandom;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 import static org.springframework.http.HttpStatus.NO_CONTENT;
 import static org.springframework.http.HttpStatus.OK;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.INTERNAL_ADMIN_CTSC;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
-class InactiveAccountsManagementTest extends FunctionalTestBase {
+class InactiveAccountsManagementTest extends AccountHelperBase {
     private static final String TEST_NAME = "E2E Account Management Test Name";
     private static final Integer TEST_EMAIL_RANDOM_NUMBER =
         ThreadLocalRandom.current().nextInt(1000, 9999);
@@ -51,18 +55,21 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
     private static final String FIRST_NAME = "E2E Account Management";
     private static final String SURNAME = "Test Name";
     private static final String LAST_SINGED_IN_DATE = "lastSignedInDate";
-    private static final String ISSUER_ID = "x-issuer-id";
     private static final Clock CL = Clock.systemUTC();
     private static final String IDAM_USER_PROVENANCE_ID = UUID.randomUUID().toString();
     private Map<String, String> issuerId;
+    private Map<String, String> ctscAdminIssuerId;
+    private Map<String, String> systemAdminAuthHeaders;
     private String mediaUserProvenanceId;
     private String adminProvenanceId;
     private String mediaUserId;
     private String adminUserId;
     private String idamUserId;
 
+    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
+
     @BeforeAll
-    public void startUp() {
+    public void startUp() throws JsonProcessingException {
 
         String requestBody = """
             {
@@ -71,26 +78,34 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
             }
             """.formatted(TEST_SYSTEM_ADMIN_EMAIL, UUID.randomUUID().toString());
 
-        objectMapper.findAndRegisterModules();
+        OBJECT_MAPPER.findAndRegisterModules();
 
         String userId =  doPostRequest(CREATE_SYSTEM_ADMIN_SSO, bearer, requestBody)
             .jsonPath().getString("userId");
-        issuerId = Map.of(ISSUER_ID, userId);
-
-        //ADD MEDIA USER
-        AzureAccount mediaUserAzureAccount = createAzureAccount(TEST_EMAIL, Roles.VERIFIED);
-        mediaUserProvenanceId = mediaUserAzureAccount.getAzureAccountId();
-        mediaUserId = createUser(TEST_EMAIL, mediaUserAzureAccount.getAzureAccountId(),
-                                   Roles.VERIFIED, UserProvenances.PI_AAD);
+        issuerId = Map.of(REQUESTER_ID_HEADER, userId);
 
         //ADD SYSTEM ADMIN
         PiUser systemAdminAccount = createSystemAdminAccount(TEST_ADMIN_EMAIL);
         adminProvenanceId = systemAdminAccount.getProvenanceUserId();
         adminUserId = systemAdminAccount.getUserId().toString();
 
+        String ctscAdminId = getCreatedAccountUserId(
+            createAccount(generateEmail(), UUID.randomUUID().toString(), INTERNAL_ADMIN_CTSC, adminUserId));
+        ctscAdminIssuerId = Map.of(REQUESTER_ID_HEADER, ctscAdminId);
+
         //ADD IDAM USER
         idamUserId = createUser(TEST_IDAM_EMAIL, IDAM_USER_PROVENANCE_ID,
-                   Roles.VERIFIED, UserProvenances.CFT_IDAM);
+                                Roles.VERIFIED, UserProvenances.CFT_IDAM);
+
+        //ADD MEDIA USER
+        AzureAccount mediaUserAzureAccount = createAzureAccount();
+        mediaUserProvenanceId = mediaUserAzureAccount.getAzureAccountId();
+        mediaUserId = createUser(TEST_EMAIL, mediaUserAzureAccount.getAzureAccountId(),
+                                 Roles.VERIFIED, UserProvenances.PI_AAD);
+
+        systemAdminAuthHeaders = new ConcurrentHashMap<>(bearer);
+        systemAdminAuthHeaders.putAll(issuerId);
+
     }
 
     @AfterAll
@@ -101,7 +116,7 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
         doDeleteRequest(TESTING_SUPPORT_DELETE_ACCOUNT_URL + TEST_SYSTEM_ADMIN_EMAIL, bearer);
     }
 
-    private AzureAccount createAzureAccount(String email, Roles role) {
+    private AzureAccount createAzureAccount() {
         String requestBody = """
             [
                 {
@@ -112,18 +127,18 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
                     "displayName": "%s"
                 }
             ]
-            """.formatted(email, FIRST_NAME, SURNAME, role, TEST_NAME);
+            """.formatted(TEST_EMAIL, FIRST_NAME, SURNAME, Roles.VERIFIED, TEST_NAME);
 
 
-        Response response = doPostRequestForB2C(CREATE_AZURE_ACCOUNT, bearer, issuerId, requestBody);
-        List<AzureAccount> azureAccountList = objectMapper.convertValue(
+        Response response = doPostRequestForB2C(CREATE_AZURE_ACCOUNT, bearer, ctscAdminIssuerId, requestBody);
+        List<AzureAccount> azureAccountList = OBJECT_MAPPER.convertValue(
             response.jsonPath().getJsonObject("CREATED_ACCOUNTS"),
             new TypeReference<>() {
             }
         );
         assertThat(azureAccountList.size()).isEqualTo(1);
 
-        return azureAccountList.get(0);
+        return azureAccountList.getFirst();
     }
 
     private PiUser createSystemAdminAccount(String email) {
@@ -156,14 +171,14 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
             ]
             """.formatted(email, provenancesId, role, provenances);
 
-        Response postResponse = doPostRequestForB2C(CREATE_PI_ACCOUNT, bearer, issuerId, requestBody);
-        List<UUID> piUsersList = objectMapper.convertValue(
+        Response postResponse = doPostRequestForB2C(CREATE_PI_ACCOUNT, bearer, ctscAdminIssuerId, requestBody);
+        List<UUID> piUsersList = OBJECT_MAPPER.convertValue(
             postResponse.jsonPath().getJsonObject("CREATED_ACCOUNTS"),
             new TypeReference<>() {
             }
         );
         assertThat(piUsersList.size()).isEqualTo(1);
-        return piUsersList.get(0).toString();
+        return piUsersList.getFirst().toString();
     }
 
     void updateUserAccountLastVerifiedDate(String userProvenancesId, UserProvenances userProvenances,
@@ -202,7 +217,7 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
         assertThat(response.getStatusCode()).isEqualTo(NO_CONTENT.value());
 
         final Response getPiUserResponse = doGetRequest(String.format(GET_BY_USER_ID, mediaUserId),
-                                                             bearer);
+                                                        systemAdminAuthHeaders);
         assertThat(getPiUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
     }
 
@@ -231,7 +246,7 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
         Response response = doDeleteRequest(DELETE_INACTIVE_ADMIN_ACCOUNT, bearer);
         assertThat(response.getStatusCode()).isEqualTo(NO_CONTENT.value());
         final Response getPiUserResponse = doGetRequest(String.format(GET_BY_USER_ID, adminUserId),
-                                                        bearer);
+                                                        systemAdminAuthHeaders);
         assertThat(getPiUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
     }
 
@@ -260,7 +275,7 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
         Response response = doDeleteRequest(DELETE_INACTIVE_IDAM_ACCOUNT, bearer);
         assertThat(response.getStatusCode()).isEqualTo(NO_CONTENT.value());
         final Response getPiUserResponse = doGetRequest(String.format(GET_BY_USER_ID, idamUserId),
-                                                        bearer);
+                                                        systemAdminAuthHeaders);
         assertThat(getPiUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
     }
 
