@@ -4,11 +4,13 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.annotation.DirtiesContext;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
@@ -17,6 +19,7 @@ import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.testcontainers.shaded.org.apache.commons.lang3.RandomUtils;
 import uk.gov.hmcts.reform.pip.account.management.model.account.CreationEnum;
 import uk.gov.hmcts.reform.pip.account.management.model.account.PiUser;
+import uk.gov.hmcts.reform.pip.account.management.service.authorisation.AccountAuthorisationService;
 import uk.gov.hmcts.reform.pip.account.management.utils.IntegrationTestBase;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
 import uk.gov.hmcts.reform.pip.model.account.UserProvenances;
@@ -30,6 +33,8 @@ import java.util.UUID;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 import static org.springframework.http.HttpStatus.FORBIDDEN;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -47,11 +52,10 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
     private static final String MI_REPORTING_ACCOUNT_DATA_URL = ROOT_URL + "/mi-data";
 
     private static final String EMAIL = "test_account_admin@hmcts.net";
-    private static final String INVALID_EMAIL = "ab";
     private static final String SURNAME = "Surname";
     private static final String FORENAME = "Forename";
-    private static final String ISSUER_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba2";
-    private static final String ISSUER_HEADER = "x-issuer-id";
+    private static final String REQUESTER_ID_HEADER = "x-requester-id";
+    private static final UUID REQUESTER_ID = UUID.randomUUID();
 
     private static final String USER_SHOULD_MATCH = "Users should match";
 
@@ -59,14 +63,17 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
     private static final String UNAUTHORIZED_USERNAME = "unauthorized_isAuthorized";
 
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
-    private static final PiUser VALID_USER = createUser(true, UUID.randomUUID().toString());
+    private static final PiUser VALID_USER = createUser(UUID.randomUUID().toString());
 
     @Autowired
     private MockMvc mockMvc;
 
-    private static PiUser createUser(boolean valid, String id) {
+    @MockitoBean
+    private AccountAuthorisationService accountAuthorisationService;
+
+    private static PiUser createUser(String id) {
         PiUser user = new PiUser();
-        user.setEmail(valid ? EMAIL : INVALID_EMAIL);
+        user.setEmail(EMAIL);
         user.setProvenanceUserId(id);
         user.setUserProvenance(UserProvenances.PI_AAD);
         user.setRoles(Roles.INTERNAL_ADMIN_CTSC);
@@ -80,17 +87,23 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
         OBJECT_MAPPER.findAndRegisterModules();
     }
 
+    @BeforeEach
+    void beforeEachSetUp() {
+        when(accountAuthorisationService.userCanCreateAccount(any(), any())).thenReturn(true);
+        when(accountAuthorisationService.userCanViewAccounts(any())).thenReturn(true);
+    }
+
     @Test
     void testMiData() throws Exception {
         String provenanceId = UUID.randomUUID().toString();
-        PiUser validUser = createUser(true, provenanceId);
+        PiUser validUser = createUser(provenanceId);
         validUser.setEmail("test-account-am-" + RandomUtils.nextInt() + "@hmcts.net");
 
         MockHttpServletRequestBuilder createRequest =
             MockMvcRequestBuilders
                 .post(PI_URL)
                 .content(OBJECT_MAPPER.writeValueAsString(List.of(validUser)))
-                .header(ISSUER_HEADER, ISSUER_ID)
+                .header(REQUESTER_ID_HEADER, REQUESTER_ID)
                 .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult responseCreateUser = mockMvc.perform(createRequest)
@@ -102,7 +115,7 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
 
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
             .get(MI_REPORTING_ACCOUNT_DATA_URL);
@@ -142,7 +155,7 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
             MockMvcRequestBuilders
                 .post(PI_URL)
                 .content(OBJECT_MAPPER.writeValueAsString(List.of(VALID_USER)))
-                .header(ISSUER_HEADER, ISSUER_ID)
+                .header(REQUESTER_ID_HEADER, REQUESTER_ID)
                 .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult responseCreateUser = mockMvc.perform(createRequest)
@@ -154,10 +167,10 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
 
         MockHttpServletRequestBuilder getRequest = MockMvcRequestBuilders
-            .get(THIRD_PARTY_URL);
+            .get(THIRD_PARTY_URL).header(REQUESTER_ID_HEADER, REQUESTER_ID);
 
         MvcResult responseGetUser =
             mockMvc.perform(getRequest).andExpect(status().isOk()).andReturn();
@@ -174,22 +187,24 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
     @Test
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testUnauthorizedGetAllThirdPartyAccounts() throws Exception {
+        when(accountAuthorisationService.userCanViewAccounts(any())).thenReturn(false);
+
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .get(THIRD_PARTY_URL);
+            .get(THIRD_PARTY_URL).header(REQUESTER_ID_HEADER, REQUESTER_ID);
 
         assertRequestResponseStatus(mockMvc, request, FORBIDDEN.value());
     }
 
     @Test
     void testGetAllAccountsExceptThirdParty() throws Exception {
-        PiUser validUser1 = createUser(true, UUID.randomUUID().toString());
-        PiUser validUser2 = createUser(true, UUID.randomUUID().toString());
+        PiUser validUser1 = createUser(UUID.randomUUID().toString());
+        PiUser validUser2 = createUser(UUID.randomUUID().toString());
 
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder =
             MockMvcRequestBuilders
                 .post(PI_URL)
                 .content(OBJECT_MAPPER.writeValueAsString(List.of(validUser1, validUser2)))
-                .header(ISSUER_HEADER, ISSUER_ID)
+                .header(REQUESTER_ID_HEADER, REQUESTER_ID)
                 .contentType(MediaType.APPLICATION_JSON);
         MvcResult responseCreateUser = mockMvc.perform(mockHttpServletRequestBuilder)
             .andExpect(status().isCreated()).andReturn();
@@ -201,10 +216,10 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
 
-        MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .get(GET_ALL_ACCOUNTS_EXCEPT_THIRD_PARTY);
+        MockHttpServletRequestBuilder request = MockMvcRequestBuilders.get(GET_ALL_ACCOUNTS_EXCEPT_THIRD_PARTY)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID);
 
         MvcResult response =
             mockMvc.perform(request).andExpect(status().isOk()).andReturn();
@@ -218,8 +233,11 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
     @Test
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testUnauthorizedGetAllAccountsExceptThirdParty() throws Exception {
+        when(accountAuthorisationService.userCanViewAccounts(any())).thenReturn(false);
+
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .get(GET_ALL_ACCOUNTS_EXCEPT_THIRD_PARTY);
+            .get(GET_ALL_ACCOUNTS_EXCEPT_THIRD_PARTY)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID);
 
         assertRequestResponseStatus(mockMvc, request, FORBIDDEN.value());
     }
@@ -230,7 +248,7 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
             MockMvcRequestBuilders
                 .post(PI_URL)
                 .content(OBJECT_MAPPER.writeValueAsString(List.of(VALID_USER)))
-                .header(ISSUER_HEADER, ISSUER_ID)
+                .header(REQUESTER_ID_HEADER, REQUESTER_ID)
                 .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult responseCreateUser = mockMvc.perform(createRequest)
@@ -242,7 +260,7 @@ class CustomAccountRetrievalTest extends IntegrationTestBase {
                 }
             );
 
-        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).get(0).toString();
+        String createdUserId = mappedResponse.get(CreationEnum.CREATED_ACCOUNTS).getFirst().toString();
 
         MockHttpServletRequestBuilder getRequest = MockMvcRequestBuilders
             .get(ADMIN_ROOT_URL + VALID_USER.getEmail() + "/" + VALID_USER.getUserProvenance());
